# libsecp256k1

./: .gitignore  Cargo.toml
.github/workflows/: audit.yml  check-style.yml  clippy.yml  rust-windows.yml  rust.yml
core/: Cargo.toml
core/src/: der.rs  ecmult.rs  field.rs  group.rs  lib.rs  scalar.rs
src/: lib.rs
