[package]
name = "libsecp256k1-core"
description = "Core functions for pure Rust secp256k1 implementation."
license = "Apache-2.0"
version = "0.3.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/paritytech/libsecp256k1"
keywords = ["crypto", "ECDSA", "secp256k1", "bitcoin", "no_std"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0",  default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
subtle = { version = "2.2", default-features = false }
crunchy = "0.2"
digest = "0.9"

[features]
default = ["std"]
std = ["codec/std", "subtle/std"]
